- Update to newest versions of Geometry.h/cxx
- Hardcoded match window in plots should probably come from a conf file or a
  DAQManager parameter.
    - We can have a field for setting it in the Settings panel.
- Should Geometry's run number be coming from the conf file or system time?
- Should we be reading/writing the time correction?
- Some Plot members are not copied in the copy constructor.

-------------------------------------------------------------------------------

## 2024-04-26

## Summary

- Working on cleaning up event display tracks. Tracked the issue to failure to
  properly initialize an RTParam. Working on the RTParam.

## Added

- Added beginning and end buttons to EventTab.

## Changed

- Extensive changes to RTParam.cxx.
- Moved functionality from plots to DAQData.

-------------------------------------------------------------------------------

## 2024-04-25

## Summary

- Bugfixes for GUI side of the Event Display.
- Still searching for the issue with Event Display tracks.

## Added

- RunView now displays the number of 'Passing Events', which are the events 
  that pass RecoUtility::CheckEvent().

## Changed

- DAQData::clear() now called before anything else is done with it on the start
  of a new data run.
- The eventDisplay is now cleared within DAQData::clear().
- The first update after the creation of a tab is now performed by TabPanel.cpp
  instead of in the tab constructor. Tabs no longer need to include a call to
  update in the constructor.

## Fixed

- Fixed issue where hits and tracks would not be drawn if any Update() call was
  performed on the EventTab's canvas outside of EventDisplay::Draw().

-------------------------------------------------------------------------------

## 2024-04-24

## Summary

- Display side of the event display tab is now functional.

## Added

- MUON_RECO -- Added slope() and y_int() functions to TrackParam
            -- Track.h/cxx -- Switched to angle-intercept representation from