@@ -1,0 +1,82 @@
+#
+# Module 16 cosmic data
+#
+
+[General]
+RawFileName         = run_20240503_164956.dat
+RunNumber           = 202405030
+IsMC                = 0
+MaxEventCount       = 20000
+MaxPassEvents       = 20000
+
+[RecoUtility]
+MIN_HITS_NUMBER     = 6
+MAX_HITS_NUMBER     = 12
+MAX_TIME_DIFFERENCE = 20000
+MIN_CLUSTER_SIZE    = 1
+MAX_CLUSTER_SIZE    = 8
+MIN_CLUSTERS_PER_ML = 1
+MAX_CLUSTERS_PER_ML = 4
+TRIGGER_OFFSET      = 0
+SIG_VOLTAGE_INVERT  = 1
+TRG_VOLTAGE_INVERT  = 0
+IS_PHASE2_DATA      = 1
+IS_RELATIVE_DATA    = 0
+WIDTHSEL            = 2
+ADC_NOISE_CUT       = 105
+ADC_HIST_TOTAL_BIN = 256
+TDC_HIST_TOTAL_BIN = 512 
+ADC_HIST_LEFT      = 0 
+ADC_HIST_RIGHT     = 400 
+TDC_HIST_LEFT      = 0 
+TDC_HIST_RIGHT     = 800 
+
+[TimeCorrection]
+IsASD2 = 1
+
+[T0Fit]
+UseFullTDC = 0
+
+[Geometry]
+RunNumber           = 202405030
+TriggerMezz         = 99
+TriggerChannel      = 23
+ActiveTDCs          =  0:  1:  2:  3 : 4  : 5  : 6  : 7  : 8  : 9  
+TDCMultilayer       =  1:  0:  1:  0 : 1  : 0  : 1  : 0  : 1  : 0  
+TDCColumn           = 17: 17: 23: 23 : 29 : 29 : 35 : 35 : 41 : 41 
+ChamberType         = A
+TdcColByTubeNo      = 1
+MAX_TDC             = 24
+MAX_TUBE_COLUMN     = 65
+ML_distance         = 84.83 #mm
+TubeLength          = 1.625 #meters
+FlipTDCs            = 1
+
+[AutoCalibration]
+Parameterization = Chebyshev
+MinEvent         =       0
+NEvents          =  100000
+MaxResidual      =  5
+UseFullCheby     = 1
+NRT              = 1
+Tolerance        = 0.001
+ConstrainZero    = 1
+ConstrainEndpoint= 0
+MaxLinear        = 0.15
+
+[Residuals]
+NEvents          = 100000
+MinEvent         = 0
+UseResForSysts   =      0
+
+[Resolution]
+DeconvolutionRun          = 14
+DeconvolutionRunSoftEDown = 11
+DeconvolutionRunSoftEUp   = 10
+DeconvolutionRunNoSoftE   = 12
+ReconvolutionRun          = 15
+
+[RecoRTP]
+T0Path = /home/rqian/mdt/ATLAS_Online_Monitor/ROOT_plot/conf/CERN/T0.root
+RTPath = /home/rqian/mdt/ATLAS_Online_Monitor/ROOT_plot/conf/CERN/autoCalibratedRT_0_100000.root
+
